fix: se corrige error de documentacion api, ya que la autorizacion no tenia token
