# app/Http/Controllers/Controller.php
@@ -22,23 +22,23 @@ use Illuminate\Routing\Controller as BaseController;
  * ),
  *
  * @OA\Server(
- *     description="API APIJAM12E",
- *     url="http://127.0.0.1:8000"
+ *     description="API JAM12E",
+ *     url=L5_SWAGGER_CONST_HOST,
  * )
  *
  */
 /**
  * @OA\SecurityScheme(
  *     @OA\Flow(
- *         flow="clientCredentials",
+ *         flow="password",
  *         tokenUrl="/oauth/token",
- *         scopes={}
+ *         authorizationUrl="/oauth/authorize",
+ *         scopes={*}
  *     ),
  *
- *       securityScheme="oauth2",
+ *     securityScheme="passport",
  *     in="header",
- *     type="http",
- *     name="oauth2",
+ *     type="oauth2",
  *     scheme="bearer",
  * )
  */
